--- a/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
+++ b/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
@@ -29,50 +29,53 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="RXS-At-xoX">
-            <rect key="frame" x="0.0" y="0.0" width="378" height="353"/>
+            <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q79-Wc-dIi">
-                    <rect key="frame" x="0.0" y="0.0" width="378" height="353"/>
+                    <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWt-Rz-HEn">
-                            <rect key="frame" x="0.0" y="0.0" width="378" height="353"/>
+                            <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cXb-W7-qn8">
-                                    <rect key="frame" x="0.0" y="0.0" width="6" height="353"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="6" height="115"/>
                                     <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="6" id="Lbq-Lc-tuS"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-r6-rRj" userLabel="Content">
-                                    <rect key="frame" x="16" y="0.0" width="347" height="353"/>
+                                    <rect key="frame" x="16" y="0.0" width="347" height="115"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ui-Mh-dab">
-                                            <rect key="frame" x="0.0" y="154" width="0.0" height="45"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ui-Mh-dab">
+                                            <rect key="frame" x="0.0" y="21" width="0.0" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" id="Jbm-Ik-YlS"/>
-                                                <constraint firstAttribute="height" constant="45" id="QPH-YZ-Wzf"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBD-I4-Y6l">
-                                            <rect key="frame" x="15" y="25" width="292" height="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBD-I4-Y6l" customClass="AnaVodafoneLabel">
+                                            <rect key="frame" x="-2" y="10" width="309" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="YMM-KW-t32"/>
                                             </constraints>
-                                            <attributedString key="attributedText"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s21-k0-1uu">
-                                            <rect key="frame" x="15" y="29" width="292" height="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s21-k0-1uu" customClass="AnaVodafoneLabel">
+                                            <rect key="frame" x="0.0" y="15" width="319" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="h9r-Wn-bLH"/>
                                             </constraints>
                                             <attributedString key="attributedText"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ILh-eS-hED">
-                                            <rect key="frame" x="15" y="34" width="292" height="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ILh-eS-hED" customClass="AnaVodafoneLabel">
+                                            <rect key="frame" x="0.0" y="19" width="319" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="1cR-VC-T5m"/>
                                             </constraints>
@@ -80,14 +83,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="Yqk-DM-7TO">
-                                            <rect key="frame" x="323" y="164.5" width="24" height="24"/>
+                                            <rect key="frame" x="323" y="45.5" width="24" height="24"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="24" id="Iej-12-OOe"/>
                                                 <constraint firstAttribute="height" constant="24" id="zzP-N1-42K"/>
                                             </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeo-2j-bMz">
-                                            <rect key="frame" x="-16" y="0.0" width="378" height="353"/>
+                                            <rect key="frame" x="-16" y="0.0" width="378" height="115"/>
                                             <connections>
                                                 <action selector="HandleViewTappedAction:" destination="-1" eventType="touchUpInside" id="cSE-8S-sQJ"/>
                                             </connections>
@@ -95,31 +98,33 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="right" secondItem="Yqk-DM-7TO" secondAttribute="right" id="06r-cJ-X0u"/>
-                                        <constraint firstItem="MBD-I4-Y6l" firstAttribute="top" secondItem="7LQ-r6-rRj" secondAttribute="top" constant="25" id="7cr-dI-pmE"/>
-                                        <constraint firstItem="s21-k0-1uu" firstAttribute="centerX" secondItem="MBD-I4-Y6l" secondAttribute="centerX" id="CyP-8e-23m"/>
-                                        <constraint firstItem="ILh-eS-hED" firstAttribute="centerX" secondItem="s21-k0-1uu" secondAttribute="centerX" id="LnK-qN-eqo"/>
-                                        <constraint firstItem="s21-k0-1uu" firstAttribute="width" secondItem="MBD-I4-Y6l" secondAttribute="width" id="VwK-k5-nXZ"/>
-                                        <constraint firstItem="s21-k0-1uu" firstAttribute="top" secondItem="MBD-I4-Y6l" secondAttribute="bottom" constant="4" id="XiO-J9-tah"/>
-                                        <constraint firstItem="ILh-eS-hED" firstAttribute="top" secondItem="s21-k0-1uu" secondAttribute="bottom" constant="5" id="ZsE-VS-che"/>
+                                        <constraint firstAttribute="trailing" secondItem="Yqk-DM-7TO" secondAttribute="trailing" id="06r-cJ-X0u"/>
+                                        <constraint firstItem="ILh-eS-hED" firstAttribute="trailing" secondItem="s21-k0-1uu" secondAttribute="trailing" id="1h2-RJ-MCH"/>
+                                        <constraint firstItem="s21-k0-1uu" firstAttribute="leading" secondItem="6ui-Mh-dab" secondAttribute="trailing" id="3xq-EG-gC9"/>
+                                        <constraint firstItem="Yqk-DM-7TO" firstAttribute="leading" secondItem="s21-k0-1uu" secondAttribute="trailing" constant="4" id="7Qq-Av-2dB"/>
+                                        <constraint firstItem="MBD-I4-Y6l" firstAttribute="top" secondItem="7LQ-r6-rRj" secondAttribute="top" constant="10" id="7cr-dI-pmE"/>
+                                        <constraint firstItem="ILh-eS-hED" firstAttribute="leading" secondItem="s21-k0-1uu" secondAttribute="leading" id="HY0-FL-4ly"/>
+                                        <constraint firstItem="s21-k0-1uu" firstAttribute="top" secondItem="MBD-I4-Y6l" secondAttribute="bottom" constant="5" id="XiO-J9-tah"/>
+                                        <constraint firstItem="ILh-eS-hED" firstAttribute="top" secondItem="s21-k0-1uu" secondAttribute="bottom" constant="4" id="ZsE-VS-che"/>
                                         <constraint firstItem="ILh-eS-hED" firstAttribute="width" secondItem="s21-k0-1uu" secondAttribute="width" id="b6i-3m-2pw"/>
+                                        <constraint firstItem="6ui-Mh-dab" firstAttribute="top" secondItem="s21-k0-1uu" secondAttribute="top" constant="6" id="bOT-Zm-sKc"/>
+                                        <constraint firstItem="6ui-Mh-dab" firstAttribute="bottom" secondItem="ILh-eS-hED" secondAttribute="bottom" constant="2" id="dLP-9w-2vT"/>
                                         <constraint firstItem="Yqk-DM-7TO" firstAttribute="leading" secondItem="MBD-I4-Y6l" secondAttribute="trailing" constant="16" id="m5E-pd-Ruy"/>
-                                        <constraint firstItem="6ui-Mh-dab" firstAttribute="left" secondItem="7LQ-r6-rRj" secondAttribute="left" id="u5r-ks-q1M"/>
-                                        <constraint firstItem="MBD-I4-Y6l" firstAttribute="left" secondItem="6ui-Mh-dab" secondAttribute="right" constant="15" id="xCv-e1-U76"/>
+                                        <constraint firstItem="6ui-Mh-dab" firstAttribute="leading" secondItem="7LQ-r6-rRj" secondAttribute="leading" id="u5r-ks-q1M"/>
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="cXb-W7-qn8" firstAttribute="left" secondItem="xWt-Rz-HEn" secondAttribute="left" id="B72-Oc-ymt"/>
+                                <constraint firstItem="cXb-W7-qn8" firstAttribute="leading" secondItem="xWt-Rz-HEn" secondAttribute="leading" id="B72-Oc-ymt"/>
                                 <constraint firstItem="7LQ-r6-rRj" firstAttribute="height" secondItem="xWt-Rz-HEn" secondAttribute="height" id="DVs-pY-JUZ"/>
                                 <constraint firstItem="cXb-W7-qn8" firstAttribute="height" secondItem="xWt-Rz-HEn" secondAttribute="height" id="Khn-17-dlD"/>
                                 <constraint firstItem="Yqk-DM-7TO" firstAttribute="centerY" secondItem="xWt-Rz-HEn" secondAttribute="centerY" id="ULh-GK-acn"/>
-                                <constraint firstItem="7LQ-r6-rRj" firstAttribute="left" secondItem="cXb-W7-qn8" secondAttribute="right" constant="10" id="W4c-bp-OdB"/>
-                                <constraint firstItem="6ui-Mh-dab" firstAttribute="centerY" secondItem="xWt-Rz-HEn" secondAttribute="centerY" id="lQM-LS-Lve"/>
-                                <constraint firstAttribute="right" secondItem="7LQ-r6-rRj" secondAttribute="right" constant="15" id="m7R-5v-NRS"/>
+                                <constraint firstItem="7LQ-r6-rRj" firstAttribute="leading" secondItem="cXb-W7-qn8" secondAttribute="trailing" constant="10" id="W4c-bp-OdB"/>
+                                <constraint firstAttribute="trailing" secondItem="7LQ-r6-rRj" secondAttribute="trailing" constant="15" id="m7R-5v-NRS"/>
                                 <constraint firstItem="7LQ-r6-rRj" firstAttribute="top" secondItem="xWt-Rz-HEn" secondAttribute="top" id="xiy-2R-MaK"/>
                                 <constraint firstItem="cXb-W7-qn8" firstAttribute="top" secondItem="xWt-Rz-HEn" secondAttribute="top" id="xom-Ww-Hxw"/>
+                                <constraint firstItem="MBD-I4-Y6l" firstAttribute="leading" secondItem="xWt-Rz-HEn" secondAttribute="leading" constant="14" id="zzV-T2-Tuj"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -136,7 +141,7 @@
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oyl-yI-tyq">
-                    <rect key="frame" x="0.0" y="353" width="378" height="0.0"/>
+                    <rect key="frame" x="0.0" y="115" width="378" height="0.0"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JcY-QE-RnB" customClass="ExpandSignpostWithAvatarCardView">
                             <rect key="frame" x="0.0" y="0.0" width="378" height="0.0"/>
@@ -148,12 +153,12 @@
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="height" secondItem="oyl-yI-tyq" secondAttribute="height" id="Bhu-hW-leN"/>
                         <constraint firstAttribute="height" id="hys-QR-IvM"/>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="width" secondItem="oyl-yI-tyq" secondAttribute="width" id="nkR-bW-chm"/>
-                        <constraint firstAttribute="right" secondItem="JcY-QE-RnB" secondAttribute="right" id="o31-fU-PdQ"/>
+                        <constraint firstAttribute="trailing" secondItem="JcY-QE-RnB" secondAttribute="trailing" id="o31-fU-PdQ"/>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="centerY" secondItem="oyl-yI-tyq" secondAttribute="centerY" id="z8P-UQ-r4f"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="oyl-yI-tyq" firstAttribute="width" secondItem="RXS-At-xoX" secondAttribute="width" id="5eO-Wc-rUa"/>
                 <constraint firstItem="oyl-yI-tyq" firstAttribute="centerX" secondItem="RXS-At-xoX" secondAttribute="centerX" id="EDt-W8-O0y"/>
@@ -167,7 +172,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-190" y="-13.5"/>
+            <point key="canvasLocation" x="-190.40000000000001" y="-120.98950524737631"/>
         </view>
     </objects>
     <resources>
