--- a/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
+++ b/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EXSignpostsWithAvatarCardView">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PaymentDetailsSignPostCardView">
             <connections>
                 <outlet property="arrowImgView" destination="Yqk-DM-7TO" id="Rlb-xD-Uof"/>
                 <outlet property="avatarImageWidthConstraint" destination="Jbm-Ik-YlS" id="jgL-U4-63w"/>
@@ -20,6 +20,8 @@
                 <outlet property="expandedViewHeightConstraint" destination="hys-QR-IvM" id="ldv-0K-YtW"/>
                 <outlet property="secondTitleLabel" destination="ILh-eS-hED" id="pYS-Nr-sXn"/>
                 <outlet property="subTitleLabel" destination="s21-k0-1uu" id="jkZ-Bw-haf"/>
+                <outlet property="tableTitleLabel" destination="Fzc-d7-fvQ" id="vdH-K7-2cC"/>
+                <outlet property="tableTitleLabelHeightConstraint" destination="o7c-Zb-xAQ" id="t8h-Aq-mjd"/>
                 <outlet property="titleLabel" destination="MBD-I4-Y6l" id="lE3-Ze-FVX"/>
                 <outlet property="titleLabelTopConstraint" destination="7cr-dI-pmE" id="bMt-yC-cXH"/>
                 <outlet property="verticalLineView" destination="cXb-W7-qn8" id="Ksu-Ed-WtM"/>
@@ -29,24 +31,24 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="RXS-At-xoX">
-            <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
+            <rect key="frame" x="0.0" y="0.0" width="378" height="169"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q79-Wc-dIi">
-                    <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
+                    <rect key="frame" x="0.0" y="0.0" width="378" height="169"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWt-Rz-HEn">
-                            <rect key="frame" x="0.0" y="0.0" width="378" height="115"/>
+                            <rect key="frame" x="0.0" y="0.0" width="378" height="169"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cXb-W7-qn8">
-                                    <rect key="frame" x="0.0" y="0.0" width="6" height="115"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="6" height="169"/>
                                     <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="6" id="Lbq-Lc-tuS"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-r6-rRj" userLabel="Content">
-                                    <rect key="frame" x="16" y="0.0" width="347" height="115"/>
+                                    <rect key="frame" x="16" y="0.0" width="347" height="169"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ui-Mh-dab">
                                             <rect key="frame" x="0.0" y="21" width="0.0" height="0.0"/>
@@ -83,14 +85,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="Yqk-DM-7TO">
-                                            <rect key="frame" x="323" y="45.5" width="24" height="24"/>
+                                            <rect key="frame" x="323" y="72.5" width="24" height="24"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="24" id="Iej-12-OOe"/>
                                                 <constraint firstAttribute="height" constant="24" id="zzP-N1-42K"/>
                                             </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeo-2j-bMz">
-                                            <rect key="frame" x="-16" y="0.0" width="378" height="115"/>
+                                            <rect key="frame" x="-16" y="0.0" width="378" height="169"/>
                                             <connections>
                                                 <action selector="HandleViewTappedAction:" destination="-1" eventType="touchUpInside" id="cSE-8S-sQJ"/>
                                             </connections>
@@ -141,8 +143,20 @@
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oyl-yI-tyq">
-                    <rect key="frame" x="0.0" y="115" width="378" height="0.0"/>
+                    <rect key="frame" x="0.0" y="169" width="378" height="0.0"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fzc-d7-fvQ" customClass="AnaVodafoneLabel">
+                            <rect key="frame" x="20" y="0.0" width="338" height="0.0"/>
+                            <constraints>
+                                <constraint firstAttribute="height" id="o7c-Zb-xAQ"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JcY-QE-RnB" customClass="ExpandSignpostWithAvatarCardView">
                             <rect key="frame" x="0.0" y="0.0" width="378" height="0.0"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -150,11 +164,14 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="JcY-QE-RnB" firstAttribute="height" secondItem="oyl-yI-tyq" secondAttribute="height" id="Bhu-hW-leN"/>
+                        <constraint firstItem="Fzc-d7-fvQ" firstAttribute="width" secondItem="oyl-yI-tyq" secondAttribute="width" constant="-40" id="99y-lq-FiM"/>
+                        <constraint firstItem="Fzc-d7-fvQ" firstAttribute="centerX" secondItem="oyl-yI-tyq" secondAttribute="centerX" id="Eh0-9r-rjE"/>
+                        <constraint firstItem="JcY-QE-RnB" firstAttribute="centerX" secondItem="oyl-yI-tyq" secondAttribute="centerX" id="JAb-ac-9r2"/>
+                        <constraint firstItem="Fzc-d7-fvQ" firstAttribute="top" secondItem="oyl-yI-tyq" secondAttribute="top" id="Rfc-8O-CbF"/>
+                        <constraint firstAttribute="bottom" secondItem="JcY-QE-RnB" secondAttribute="bottom" id="Ucv-dy-pCy"/>
+                        <constraint firstItem="JcY-QE-RnB" firstAttribute="top" secondItem="Fzc-d7-fvQ" secondAttribute="bottom" id="WmA-hX-0UX"/>
                         <constraint firstAttribute="height" id="hys-QR-IvM"/>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="width" secondItem="oyl-yI-tyq" secondAttribute="width" id="nkR-bW-chm"/>
-                        <constraint firstAttribute="trailing" secondItem="JcY-QE-RnB" secondAttribute="trailing" id="o31-fU-PdQ"/>
-                        <constraint firstItem="JcY-QE-RnB" firstAttribute="centerY" secondItem="oyl-yI-tyq" secondAttribute="centerY" id="z8P-UQ-r4f"/>
                     </constraints>
                 </view>
             </subviews>
@@ -172,7 +189,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-190.40000000000001" y="-120.98950524737631"/>
+            <point key="canvasLocation" x="-180.80000000000001" y="-279.31034482758622"/>
         </view>
     </objects>
     <resources>
